--- a/PBL01_sample_code_改変.ipynb
+++ b/PBL01_sample_code_改変.ipynb
@@ -69,7 +69,7 @@
         "!pip install japanize-matplotlib\n",
         "!pip install category_encoders"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -123,7 +123,7 @@
         "\n",
         "from lightgbm import LGBMRegressor"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -161,7 +161,7 @@
         "#　filepath\n",
         "basepath = '/content/drive/MyDrive/AI Quest2021/data/'"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -184,7 +184,7 @@
         "test = pd.read_csv(basepath+'test.csv',index_col=0)\n",
         "sub = pd.read_csv(basepath+'sample_submission.csv', header=None)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -197,7 +197,7 @@
         "pd.set_option('display.max_rows', 500)\n",
         "pd.set_option('display.max_columns', 200)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -222,8 +222,7 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "wNhv81HLgzJo",
         "outputId": "080a1e78-9d93-4171-ef17-4f43224246d2"
@@ -236,7 +235,7 @@
         "cat_names.rename(columns={0: '商品大カテゴリ', 1: '商品小カテゴリ'},inplace=True)\n",
         "cat_names.head()"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -319,8 +318,7 @@
       "metadata": {
         "id": "WE9VwZw7dPL6",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "01bbe83f-6781-446f-a844-8e270aea50b2"
       },
@@ -330,7 +328,7 @@
         "sales = pd.merge(sales, cat_names, on='商品カテゴリID', how='left')\n",
         "sales.head()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -458,7 +456,7 @@
         "sales['月'] = sales['日付'].dt.month\n",
         "sales['四半期'] = sales['日付'].dt.quarter"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -480,7 +478,7 @@
         "    '四半期':4\n",
         "}, ignore_index=True)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -493,7 +491,7 @@
         "# 「月ブロック」カラムをsalesに統合する\n",
         "sales = pd.merge(sales, gp_time, on=['年', '月','四半期'], how='left')"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -505,7 +503,7 @@
         "#売上金額を追加\n",
         "sales[\"売上金額\"] = sales.商品価格 * sales.売上個数"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -519,7 +517,7 @@
         "price_bin.columns = [\"価格帯\"]\n",
         "sales = pd.concat([sales,price_bin],axis=1)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -535,7 +533,7 @@
       "source": [
         "sales.head()"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -707,7 +705,7 @@
         "sales_all = sales.copy()\n",
         "sales = sales[sales[\"商品ID\"].isin(product_id)]"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -722,7 +720,7 @@
       "source": [
         "sales.商品ID.nunique()"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -781,7 +779,7 @@
         "print(\"2019年10月に販売実績のない商品ID\",items_201910_notSales)\n",
         "print(\"２０１８年販売実績無し\",items_2019only)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -805,8 +803,7 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "5OV0UWJ82gba",
         "outputId": "6b179aec-dfaf-4d5c-be38-174a0336eebc"
@@ -815,7 +812,7 @@
         "pd.options.display.float_format = '{:.2f}'.format\n",
         "sales.describe(percentiles=[0.9,0.99,0.999,0.9999])"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1032,8 +1029,7 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "oT0MQy2r2x7o",
         "outputId": "06b94bc5-0ab0-45d2-ae1d-3c88c6f368ab"
@@ -1049,7 +1045,7 @@
         "plt.xlim(sales.商品価格.min(), sales.商品価格.max()*1.1)\n",
         "sns.boxplot(x=sales.商品価格, flierprops=flierprops)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1130,7 +1126,7 @@
         "\n",
         "  return all_train"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1141,15 +1137,14 @@
       "source": [
         "train = crate_monthly_table(sales)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "S2C15bQZC0kF",
         "outputId": "6a12a403-030a-4200-a1a6-68bf8d389b0e"
@@ -1157,7 +1152,7 @@
       "source": [
         "train.describe(percentiles=[0.9,0.99,0.999,0.9999])"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1285,8 +1280,7 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "Y7PWWaepDGvc",
         "outputId": "386841fc-80e6-4cce-fcf0-9e0c7e587a6a"
@@ -1298,7 +1292,7 @@
         "                  linestyle='none', markeredgecolor='black')\n",
         "sns.boxplot(x=train.売上個数, flierprops=flierprops)"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1345,7 +1339,7 @@
         "\n",
         "  return dataset"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1353,8 +1347,7 @@
       "metadata": {
         "id": "2iz5crEflIhk",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "d65f99d5-86e7-4133-a04a-557d766f6189"
       },
@@ -1362,7 +1355,7 @@
         "dataset = merge_train_test (train,test)\n",
         "dataset.head()"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1477,7 +1470,7 @@
         "\n",
         "  return dataset"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1494,7 +1487,7 @@
         "dataset = merge_category_columns(dataset,cats,cat_names,gp_time)\n",
         "dataset.head()"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1639,7 +1632,7 @@
         "returns.columns = [\"商品カテゴリID\",\"返品回数\"]\n",
         "returns"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1817,7 +1810,7 @@
         "sales_start_month = pd.DataFrame(sales_start_month).reset_index()\n",
         "sales_start_month.head()"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1910,7 +1903,7 @@
         "sales_start_month_p = sales.groupby([\"商品ID\"])[\"月ブロック\"].agg(販売開始月ブロック_pid = \"min\").reset_index()\n",
         "sales_start_month_p.head()"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2001,7 +1994,7 @@
         "agg_productID_price = pd.concat([agg_productID_price,price_bin],axis=1)\n",
         "agg_productID_price.head()"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2113,7 +2106,7 @@
         "agg_catID_price = sales.groupby(['商品カテゴリID'])[\"商品価格\"].agg(最大価格_cid=\"max\",最小価格_cid=\"min\",平均価格_cid=\"mean\",中央値価格_cid=\"median\").reset_index()\n",
         "agg_catID_price.head()"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2219,7 +2212,7 @@
         "agg_LargeCat_price = sales.groupby(['商品大カテゴリ'])[\"商品価格\"].agg(最大価格_lc=\"max\",最小価格_lc=\"min\",平均価格_lc=\"mean\",中央値価格_lc=\"median\").reset_index()\n",
         "agg_LargeCat_price.head()"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2322,7 +2315,7 @@
         "dataset = pd.merge(dataset, agg_catID_price, on='商品カテゴリID', how='left')\n",
         "dataset = pd.merge(dataset, agg_LargeCat_price, on='商品大カテゴリ', how='left')"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2338,7 +2331,7 @@
       "source": [
         "dataset.head()"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2593,7 +2586,7 @@
         "days_of_month = pd.DataFrame({'月': range(1,13),'日数': [31,28,31,30,31,30,31,31,30,31,30,31]})\n",
         "dataset = pd.merge(dataset, days_of_month, on='月', how='left')"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2609,7 +2602,19 @@
         "new_col = \"記念品\"\n",
         "dataset[new_col] = dataset[col].str.contains(new_col).astype(int)"
       ],
-      "execution_count": 36,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8faJzlG5JXO9"
+      },
+      "source": [
+        "dataset[\"割引率\"]　 = dataset[\"セール価格_pid\"] / dataset[\"定価_pid\"]\n",
+        "dataset[\"売上金額\"] = dataset[\"売上個数\"] * dataset[\"定価_pid\"]"
+      ],
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2624,7 +2629,7 @@
       "source": [
         "dataset.isnull().sum()"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2675,7 +2680,7 @@
       "source": [
         "dataset[\"返品回数\"].fillna(0,inplace=True)"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2715,7 +2720,7 @@
         "      dataset[change_col_name].fillna(0,inplace=True)\n",
         "  return dataset"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2731,7 +2736,7 @@
         "for agg_name,agg_cols in zip(agg_names,agg_cols_list):\n",
         "  dataset = create_lag_feature(sales,dataset,month,agg_name,agg_cols)"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2772,6 +2777,9 @@
         "\n",
         "\n",
         "  for num,cols in zip(agg_num,cols_list): \n",
+        "    col_name = '売上個数({})_agg{}m_sum'.format( col_name_prefix, num )\n",
+        "    dataset[col_name] = dataset[cols].sum(axis=1)\n",
+        "\n",
         "    col_name = '売上個数({})_agg{}m_max'.format( col_name_prefix, num )\n",
         "    dataset[col_name] = dataset[cols].max(axis=1)\n",
         "\n",
@@ -2780,7 +2788,7 @@
         "\n",
         "  return dataset"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2804,7 +2812,7 @@
         "  dataset = create_rolling_feature(dataset , cols_target, col_name_prefix)\n",
         "  "
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2828,7 +2836,7 @@
       "source": [
         "dataset.dtypes"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3200,7 +3208,7 @@
         "\n",
         "  return dataset"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3216,7 +3224,7 @@
         "\n",
         "  return enc_dataset"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3232,7 +3240,7 @@
         "dataset = chage_data_type(dataset)\n",
         "dataset = onehot_encording(dataset)"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3252,7 +3260,7 @@
       "source": [
         "dataset = dataset.reset_index()"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3263,7 +3271,7 @@
       "source": [
         "dataset.drop(\"index\",axis=1,inplace=True)"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3279,7 +3287,7 @@
       "source": [
         "dataset.head()"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4907,7 +4915,7 @@
         "\n",
         "  return X_train,y_train,X_valid,y_valid,X_test"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4918,7 +4926,7 @@
       "source": [
         "X_train,y_train,X_valid,y_valid,X_test = train_test_split(dataset)"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4950,7 +4958,7 @@
         "\n",
         "  return y_pred,feature_importance"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4965,7 +4973,7 @@
       "source": [
         "y_pred,feature_importance = modeling(X_train,y_train,X_valid,y_valid,X_test,71)"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5044,7 +5052,7 @@
         "sns.set(font=\"IPAexGothic\")\n",
         "sns.barplot(x=\"importance\", y=feature_importance.index, data=feature_importance)"
       ],
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5081,7 +5089,7 @@
         "use_col = feature_importance.index[:50]\n",
         "y_pred,feature_importance = modeling(X_train[use_col],y_train,X_valid[use_col],y_valid,X_test[use_col],71)"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
